fix:spacing on margins

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -99,6 +99,11 @@
   }
 }
 
+.aboutContainer{
+  width: 90%;
+  border: 1px solid red;
+}
+
 .innerAboutContainer {
   display: flex;
   justify-content: space-between;
@@ -143,7 +148,7 @@
   border-radius: 50%;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1024px) {
   .innerAboutContainer {
     flex-direction: column;
     align-items: center;
@@ -170,7 +175,7 @@
 }
 
 .portfolioContainer{
-  width: 80%;
+  width: 90%;
   text-align: center;
   align-items: center;
   font-size: 1.2rem;
@@ -178,6 +183,6 @@
 }
 
 .buttonContainer {
-  text-align: left;
+  text-align: center;
 }
 
