--- a/src/styles/projectsPreview.module.css
+++ b/src/styles/projectsPreview.module.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   text-align: center;
   width: 300px;
+  height: 200px;
   background-color: var(--primary);
   padding: 20px;
   margin: 15px;
